# algo-class

./: .clang-format  .gitignore  CMakeLists.txt
.githooks/: pre-commit  setup.sh
bst/: CMakeLists.txt  README.md  main.cpp  tree.hpp  util.hpp
sort/: CMakeLists.txt  README.md  analyze_results.py  main.cpp  sort.def  sort.hpp  transpose_results.py  util.hpp
sort/results/: output.csv  output_transposed.csv
sort/test/: CMakeLists.txt  test.cpp
